--- a/index.css
+++ b/index.css
@@ -110,7 +110,40 @@
     align-items: center;
     margin-right: 30px;
 }
+.othersnews{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+    height: 200px;
+    gap: 10px;
+    margin-top: 90px;
+}
 
+.othersnews1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: rgb(231 231 231);
+    width: 374px;
+    border-radius: 10px;
+    height: 110px;
+}
+
+.othersnews1img{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.othersnews1txt{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    
+}
 
 
 
