--- a/index.css
+++ b/index.css
@@ -81,6 +81,8 @@
     justify-content: space-around;
     align-items: center;
     padding-left: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 .imagem{
     display: flex;
@@ -103,6 +105,8 @@
     align-items: center;
     padding-left: 40px;
     margin-right: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 .imagem2{
     display: flex;
@@ -118,7 +122,11 @@
     font-size: 16px;
     height: 200px;
     gap: 10px;
-    margin-top: 90px;
+    margin-top: 80px;
+}
+.textother{
+    font-family: Arial, Helvetica, sans-serif;
+    size: 20px;
 }
 
 .othersnews1{
@@ -142,8 +150,84 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    size: 10px;
     
 }
 
+.othersnews2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: rgb(231 231 231);
+    width: 374px;
+    border-radius: 10px;
+    height: 110px;
+}
+
+.othersnews2img{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.othersnews2txt{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    size: 10px;
+}
+@media screen and (min-width: 1279px) {
+    .header{
+        width: 1320px;
+        margin-left: -8px
+    }
+    .manchete{
+        flex-direction: row;
+        justify-content: space-around;
+        margin-top: 30px;
+        
+    }
+    .manchete1{
+        height: 215px;
+        width: 780px;
+    }
+    .text{
+        font-size: 20px;
+    }
+    .text2{
+        font-size: 20px;
+    }
+    .manchete2{
+        height: 215px;
+        width: 725px;
+    }
+    .othersnews{
+        gap: 10px;
+    }
+    .textother{
+        margin-top: -45px;
+    }
+    .othersnews1{
+        width: 1240px;
+        height: 95px;
+        padding: 18px;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .othersnews1txt{
+       font-size: 18px;
+    }
+    .othersnews2{
+        padding: 18px;
+        width: 1350px;
+    }
+    .othersnews2txt{
+        font-size: 18px;
+    }
+}
 
 
